<resources>
	<string name="welcome_text">Welcome to the new BoardGameGeek for Android. Access the navigation menu by clicking on Ernie in the top left or by dragging from the left edge of the screen.</string>
	<string name="average_meter_text">Average = %s</string>
	<string name="bayes_meter_text">Bayes Average = %s</string>
	<string name="median_meter_text">Median = %s</string>
	<string name="stdDev_meter_text">Standard Deviation = %s</string>
	<string name="weight_1_text">%s - \"Light\"</string>
	<string name="weight_2_text">%s - \"Medium Light\"</string>
	<string name="weight_3_text">%s - \"Medium\"</string>
	<string name="weight_4_text">%s - \"Medium Heavy\"</string>
	<string name="weight_5_text">%s - \"Heavy\"</string>
	<string name="rating_count">%s ratings</string>
	<string name="weight_count">%s weights</string>
	<string name="user_total">%s users</string>
	<string name="owning_meter_text">%s Owning</string>
	<string name="rating_meter_text">%s Rating</string>
	<string name="trading_meter_text">%s Trading</string>
	<string name="wanting_meter_text">%s Wanting</string>
	<string name="wishing_meter_text">%s Wishing</string>
	<string name="weighting_meter_text">%s Weighting</string>
	<string name="id_list_text">ID: %s</string>
	<string name="designers">Designers</string>
	<string name="artists">Artists</string>
	<string name="publishers">Publishers</string>
	<string name="categories">Categories</string>
	<string name="mechanics">Mechanics</string>
	<string name="expansions">Expansions</string>
	<string name="base_games">Base Games</string>
	<string name="users">Users</string>
	<string name="weight">Weight</string>
	<string name="logPlayDialogTitle">Logging</string>
	<string name="sync_pending_update">Update pending</string>
	<string name="sync_pending_delete">Delete pending</string>
	<string name="sync_draft">Draft</string>
	<string name="sync_editing">Editing</string>
	<string name="date">Date</string>
	<string name="quantity">Quantity</string>
	<string name="quantity_hint">Quantity</string>
	<string name="length">Length</string>
	<string name="length_hint">Length in minutes</string>
	<string name="no_length">\?</string>
	<string name="location">Location</string>
	<string name="location_hint">Location</string>
	<string name="no_location">&lt;No location&gt;</string>
	<string name="incomplete">Incomplete</string>
	<string name="noWinStats">Don\'t Count Win Stats</string>
	<string name="comments">Comments</string>
	<string name="comments_hint"></string>
	<string name="send">Send</string>
	<string name="save">Save</string>
	<string name="done">Done</string>
	<string name="save_draft">Save draft</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="start">Start</string>
	<string name="end_play">End play</string>
	<string name="exact">Exact</string>
	<string name="exactly">Exactly</string>
	<string name="include_missing_values">Include games with missing values</string>
	<string name="filter_description_player_number">Only games that support this <b>entire range</b> of players will be shown. <i>Exact</i> means that only games that support that many players exactly will be shown (e.g. 2 player only games).</string>
	<string name="filter_description_include_missing_play_time">If you <b>include games with missing values</b>, the filter will show games with an unknown play time.</string>
	<string name="filter_description_include_missing_suggested_age">If you <b>include games with missing values</b>, the filter will show games without a suggested age.</string>
	<string name="filter_description_include_missing_average_weight">If you <b>include games with missing values</b>, the filter will show games without a reported average weight.</string>
	<string name="clear">Clear</string>
	<string name="set">Set</string>
	<string name="plays">Plays</string>
	<string name="played">Played</string>
	<string name="play_again">Play again</string>
	<string name="title_pick_start_player">Pick Start Player</string>
	<string name="title_players">Players</string>
	<string name="title_location">Location</string>
	<string name="title_locations">Locations</string>
	<string name="title_player">Player</string>
	<string name="num_of_players"># of players</string>
	<string name="or">Or</string>
	<string name="and">And</string>
	<string name="add">Add</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="add_player">Add player…</string>
	<string name="player_name">Player Name</string>
	<string name="username">Username</string>
	<string name="user">User</string>
	<string name="team_color">Team/Color</string>
	<string name="team">Team</string>
	<string name="starting_position">Starting Position</string>
	<string name="starting_pos">#</string>
	<string name="score">Score</string>
	<string name="rating">Rating</string>
	<string name="rating_hint">0.0</string>
	<string name="average">Average</string>
	<string name="ratings">Ratings</string>
	<string name="new_label">New</string>
	<string name="win">Win</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="never">Never</string>
	<string name="keep">Keep</string>
	<string name="more">More</string>
	<string name="image">Image</string>
	<string name="avatar">Avatar</string>
	<string name="thumbnail">Thumbnail</string>
	<string name="are_you_sure_title">Are You Sure?</string>
	<string name="are_you_sure_cancel">Are you sure you want to cancel? You will lose all of your changes.</string>
	<string name="are_you_sure_refresh_message">Refreshing will discard your local changes. Continue?</string>
	<plurals name="are_you_sure_delete_play">
		<item quantity="one">Are you sure you want to delete this play?</item>
		<item quantity="other">Are you sure you want to delete these plays?</item>
	</plurals>
	<string name="are_you_sure_delete_player">Are you sure you want to delete this player?</string>
	<string name="are_you_sure_player_sort_custom_off">Are you sure you want to enable automatic player sorting? The existing starting positions will be replaced.</string>
	<string name="are_you_sure_delete_collection_view">Are you sure you want to delete this collection view?</string>
	<string name="are_you_sure_players_clear">Are you sure you want to clear all of the players from this play?</string>
	<string name="are_you_sure_timer_reset">Are you sure you want to reset the timer and lose the current length?</string>
	<string name="app_name">BoardGameGeek</string>
	<string name="provider_label">Collection, Plays, and GeekBuddies</string>
	<string name="description_logo">BoardGameGeek</string>
	<string name="description_search">Search</string>
	<string name="title_about">About</string>
	<string name="title_search_results">Search Results</string>
	<string name="title_collection">Collection</string>
	<string name="title_hotness">The Hotness</string>
	<string name="title_settings">Settings</string>
	<string name="title_geeklists">GeekLists</string>
	<string name="title_geeklist">GeekList</string>
	<string name="title_game">Game</string>
	<string name="title_board_game">Board Game</string>
	<string name="title_board_game_expansion">Board Game Expansion</string>
	<string name="title_board_game_accessory">Board Game Accessory</string>
	<string name="title_board_game_publisher">Board Game Publisher</string>
	<string name="title_board_game_designer">Board Game Designer</string>
	<string name="title_thing">Thing</string>
	<string name="title_company">Company</string>
	<string name="title_person">Person</string>
	<string name="title_family">Family</string>
	<string name="title_file">File</string>
	<string name="title_game_shortcut">BGG Game</string>
	<string name="title_game_detail">Game Details</string>
	<string name="title_image">Image</string>
	<string name="title_buddies">GeekBuddies</string>
	<string name="title_buddy">User</string>
	<string name="title_log_play">Log Play</string>
	<string name="title_log_player">Log Player</string>
	<string name="title_add_players">Add Players</string>
	<string name="title_info">Info</string>
	<string name="title_comments">Comments</string>
	<string name="title_colors">Colors</string>
	<string name="title_forums">Forums</string>
	<string name="title_forum">Forum</string>
	<string name="title_thread">Thread</string>
	<string name="title_generalforumlist">General Forums</string>
	<string name="title_poll">Poll Information</string>
	<string name="title_plays">Plays</string>
	<string name="title_play_stats">Play Stats</string>
	<string name="title_play">Play</string>
	<string name="title_designer">Designer</string>
	<string name="title_artist">Artist</string>
	<string name="title_publisher">Publisher</string>
	<string name="title_collection_view_name_in_use">Name in Use!</string>
	<string name="title_edit_nickname">Edit Nickname</string>
	<string name="title_edit_location">Edit Location</string>
	<string name="title_edit_player">Edit Player</string>
	<string name="title_error">Error!</string>
	<string name="title_save_view">Save View</string>
	<string name="title_delete_view">Delete View</string>
	<string name="title_add_color">Add Color</string>
	<string name="msg_shortcut_created">Shortcut created</string>
	<string name="msg_missing_nickname">Must supply a name to update plays</string>
	<string name="msg_collection_view_name_in_use">There\'s already a collection view with this name. Do you want to update the existing view, or create a new one?</string>
	<string name="title_my_geek">My Geek</string>
	<string name="title_browse">Browse</string>
	<string name="title_signin">Sign In</string>
	<string name="notification_playing">Playing</string>
	<string name="notification_playing_game">Playing "%s"</string>
	<string name="pref_warning_username">Please sign in first.</string>
	<string name="loading">Loading…</string>
	<string name="empty_buddies">It appears as if you have no GeekBuddies.</string>
	<string name="empty_players">It appears as if you have played against no one.</string>
	<string name="empty_locations">It appears as if you have played nowhere.</string>
	<string name="menu_search">Search</string>
	<string name="menu_log_play">Log play</string>
	<string name="menu_log_play_quick">Quick log play</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_refresh_on">Refresh on…</string>
	<string name="menu_links">Links…</string>
	<string name="menu_link_bgg">BoardGameGeek</string>
	<string name="menu_link_bg_prices">Board Game Prices</string>
	<string name="menu_link_amazon">Amazon</string>
	<string name="menu_link_ebay">eBay</string>
	<string name="menu_share">Share</string>
	<string name="menu_sort">Sort</string>
	<string name="menu_collection_filter_add">Add filter…</string>
	<string name="menu_collection_status">Collection Status</string>
	<string name="menu_number_of_players">Number of Players</string>
	<string name="menu_play_time">Playing Time</string>
	<string name="menu_collection_random_game">Random game</string>
	<string name="menu_comments">Comments</string>
	<string name="menu_color">Teams/Colors</string>
	<string name="menu_forums">Forums</string>
	<string name="menu_create_shortcut">Create shortcut</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_plays">Plays</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_view_game">View game</string>
	<string name="times_abbr">x</string>
	<string name="on">on</string>
	<string name="players">players</string>
	<string name="at">at</string>
	<string name="for_">for</string>
	<string name="name">Name</string>
	<string name="add_field">Add field…</string>
	<string name="menu_player_order">Player order&#8230;</string>
	<string name="menu_pick_start_player">Pick start player&#8230;</string>
	<string name="menu_random_start_player">Random start player</string>
	<string name="menu_random_player_order">Random player order</string>
	<string name="number_to_text">ABC</string>
</resources>