<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/log_play"
		android:icon="@android:drawable/ic_menu_edit"
		android:title="@string/menu_log_play"/>
	<item
		android:id="@+id/log_play_quick"
		android:icon="@drawable/ic_menu_mark"
		android:title="@string/menu_log_play_quick"/>
	<item
		android:id="@+id/comments"
		android:icon="@drawable/ic_menu_start_conversation"
		android:title="@string/menu_comments"/>
	<item
		android:id="@+id/forums"
		android:icon="@drawable/ic_menu_allfriends"
		android:title="@string/menu_forums"/>
	<item
		android:id="@+id/plays"
		android:icon="@android:drawable/ic_menu_my_calendar"
		android:title="@string/menu_plays"/>
	<item
		android:id="@+id/links"
		android:icon="@drawable/ic_menu_link"
		android:title="@string/menu_links">
		<menu>
			<item
				android:id="@+id/menu_bgg"
				android:title="@string/menu_link_bgg"/>
			<item
				android:id="@+id/menu_bg_prices"
				android:title="@string/menu_link_bg_prices"/>
			<item
				android:id="@+id/menu_amazon"
				android:title="@string/menu_link_amazon"/>
			<item
				android:id="@+id/menu_ebay"
				android:title="@string/menu_link_ebay"/>
		</menu>
	</item>
	<item
		android:id="@+id/share"
		android:icon="@android:drawable/ic_menu_share"
		android:title="@string/menu_share"/>
	<item
		android:id="@+id/shortcut"
		android:title="@string/menu_create_shortcut"/>
	<item
		android:id="@+id/colors"
		android:icon="@drawable/ic_menu_friendslist"
		android:title="@string/menu_color"/>
	<item
		android:id="@+id/refresh"
		android:icon="@drawable/ic_menu_refresh"
		android:title="@string/menu_refresh"/>

</menu>