<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/menu_send"
		android:icon="?attr/ic_action_send"
		android:showAsAction="ifRoom"
		android:title="@string/send"/>
	<item
		android:id="@+id/menu_start"
		android:icon="?attr/ic_action_timer"
		android:showAsAction="ifRoom"
		android:title="@string/start"/>
	<item
		android:id="@+id/menu_add_field"
		android:icon="?attr/ic_action_add"
		android:showAsAction="ifRoom"
		android:title="@string/add_field"/>
	<item
		android:id="@+id/menu_player_order"
		android:icon="?attr/ic_action_sort"
		android:showAsAction="never"
		android:title="@string/menu_player_order">
		<menu>
			<item
				android:id="@+id/menu_pick_start_player"
				android:showAsAction="never"
				android:title="@string/menu_pick_start_player"/>
			<item
				android:id="@+id/menu_random_start_player"
				android:showAsAction="never"
				android:title="@string/menu_random_start_player"/>
			<item
				android:id="@+id/menu_random_player_order"
				android:showAsAction="never"
				android:title="@string/menu_random_player_order"/>
		</menu>
	</item>
	<item
		android:id="@+id/menu_save"
		android:icon="?attr/ic_action_save"
		android:showAsAction="never"
		android:title="@string/save_draft"/>
	<item
		android:id="@+id/menu_cancel"
		android:icon="?attr/ic_action_cancel"
		android:showAsAction="never"
		android:title="@string/cancel"/>

</menu>