<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/menu_refresh"
		android:icon="@drawable/ic_menu_refresh"
		android:showAsAction="ifRoom"
		android:title="@string/menu_refresh"/>
	<item
		android:id="@+id/menu_edit"
		android:icon="@android:drawable/ic_menu_edit"
		android:showAsAction="ifRoom"
		android:title="@string/menu_edit"/>
	<item
		android:id="@+id/menu_delete"
		android:icon="@android:drawable/ic_menu_delete"
		android:showAsAction="never"
		android:title="@string/menu_delete"/>
	<item
		android:id="@+id/menu_share"
		android:icon="@android:drawable/ic_menu_share"
		android:showAsAction="never"
		android:title="@string/menu_share"/>
	<item
		android:id="@+id/menu_view_game"
		android:icon="@android:drawable/ic_menu_view"
		android:showAsAction="never"
		android:title="@string/menu_view_game"/>

</menu>