<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/menu_list_count"
		android:actionLayout="@layout/actionbar_text_2line"
		android:showAsAction="always"
		android:title=""/>
	<item
		android:id="@+id/menu_sort"
		android:icon="?attr/ic_action_sort"
		android:showAsAction="ifRoom"
		android:title="@string/menu_sort">
		<menu>
			<item
				android:id="@+id/menu_sort_date"
				android:title="@string/date"/>
			<item
				android:id="@+id/menu_sort_location"
				android:title="@string/location"/>
		</menu>
	</item>
	<item
		android:id="@+id/menu_refresh"
		android:icon="?attr/ic_action_refresh"
		android:showAsAction="ifRoom"
		android:title="@string/menu_refresh"/>
	<item
		android:id="@+id/menu_refresh_on"
		android:icon="?attr/ic_action_refresh"
		android:showAsAction="never"
		android:title="@string/menu_refresh_on"/>

</menu>