<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/collection_filter_add"
		android:icon="@drawable/ic_menu_filter_on"
		android:title="@string/menu_collection_filter_add">
		<menu>
			<item
				android:id="@+id/menu_collection_status"
				android:title="@string/menu_collection_status"/>
			<item
				android:id="@+id/menu_number_of_players"
				android:title="@string/menu_number_of_players"/>
			<item
				android:id="@+id/menu_play_time"
				android:title="@string/menu_play_time"/>
		</menu>
	</item>
	<item
		android:id="@+id/menu_collection_filter_clear"
		android:icon="@drawable/ic_menu_filter_off"
		android:title="@string/menu_collection_filter_clear"/>
	<item
		android:id="@+id/menu_collection_filter_save"
		android:icon="@android:drawable/ic_menu_save"
		android:title="Save"/>
	<item
		android:id="@+id/menu_collection_random_game"
		android:icon="@drawable/ic_menu_emoticons"
		android:title="@string/menu_collection_random_game"/>

</menu>