<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:fillViewport="true"
	android:padding="@dimen/padding_standard" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TableLayout
			android:id="@+id/details"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="1" >

			<TableRow
				android:paddingBottom="@dimen/padding_small"
				android:paddingTop="@dimen/padding_small" >

				<TextView
					style="@style/TextLabel.Edit"
					android:text="@string/user" />

				<AutoCompleteTextView
					android:id="@+id/log_player_username"
					android:layout_span="2"
					android:completionThreshold="1"
					android:dropDownHeight="wrap_content"
					android:hint="@string/username"
					android:imeOptions="actionNext"
					android:inputType="text"
					android:maxLength="63"
					android:textColor="#000" />
			</TableRow>

			<TableRow
				android:paddingBottom="@dimen/padding_small"
				android:paddingTop="@dimen/padding_small" >

				<TextView
					style="@style/TextLabel.Edit"
					android:text="@string/name" />

				<AutoCompleteTextView
					android:id="@+id/log_player_name"
					android:layout_span="2"
					android:completionThreshold="1"
					android:dropDownHeight="wrap_content"
					android:hint="@string/player_name"
					android:imeOptions="actionNext"
					android:inputType="textPersonName|textCapWords"
					android:maxLength="255"
					android:textColor="#000" />
			</TableRow>

			<TableRow
				android:id="@+id/log_player_team_color_label"
				android:paddingBottom="@dimen/padding_small"
				android:paddingTop="@dimen/padding_small" >

				<TextView
					style="@style/TextLabel.Edit"
					android:text="@string/team" />

				<AutoCompleteTextView
					android:id="@+id/log_player_team_color"
					android:layout_span="2"
					android:completionThreshold="1"
					android:dropDownHeight="wrap_content"
					android:hint="@string/team_color"
					android:imeOptions="actionNext"
					android:inputType="textCapSentences"
					android:maxLength="32"
					android:textColor="#000" />
			</TableRow>

			<TableRow
				android:id="@+id/log_player_position_container"
				android:paddingBottom="@dimen/padding_small"
				android:paddingTop="@dimen/padding_small" >

				<TextView
					android:id="@+id/log_player_position_label"
					style="@style/TextLabel.Edit"
					android:text="@string/starting_pos" />

				<EditText
					android:id="@+id/log_player_position"
					android:hint="@string/starting_position"
					android:imeOptions="flagNoExtractUi"
					android:inputType="numberDecimal|numberSigned"
					android:maxLength="32" />

				<Button
					android:id="@+id/log_player_position_button"
					style="@style/Text.Footnote"
					android:text="@string/number_to_text" />
			</TableRow>

			<TableRow
				android:id="@+id/log_player_score_container"
				android:paddingBottom="@dimen/padding_small"
				android:paddingTop="@dimen/padding_small" >

				<TextView
					android:id="@+id/log_player_score_label"
					style="@style/TextLabel.Edit"
					android:text="@string/score" />

				<EditText
					android:id="@+id/log_player_score"
					android:hint="@string/score"
					android:imeOptions="flagNoExtractUi"
					android:inputType="numberDecimal|numberSigned"
					android:maxLength="32" />

				<Button
					android:id="@+id/log_player_score_button"
					style="@style/Text.Footnote"
					android:text="@string/number_to_text" />
			</TableRow>

			<TableRow
				android:id="@+id/log_player_rating_container"
				android:paddingBottom="@dimen/padding_small"
				android:paddingTop="@dimen/padding_small" >

				<TextView
					android:id="@+id/log_player_rating_label"
					style="@style/TextLabel.Edit"
					android:text="@string/rating" />

				<EditText
					android:id="@+id/log_player_rating"
					android:hint="@string/rating_hint"
					android:inputType="numberDecimal"
					android:maxLength="8" />
			</TableRow>
		</TableLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingTop="@dimen/padding_small" >

			<CheckBox
				android:id="@+id/log_player_new"
				style="@style/Text.CheckboxLabel"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/new_label" />

			<CheckBox
				android:id="@+id/log_player_win"
				style="@style/Text.CheckboxLabel"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/win" />
		</LinearLayout>
	</LinearLayout>

</ScrollView>