<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto" >

	<item
		android:id="@+id/menu_log_play"
		android:icon="?attr/ic_action_calendar"
		android:title="@string/menu_log_play"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/menu_log_play_quick"
		android:icon="?attr/ic_action_today"
		android:title="@string/menu_log_play_quick"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/menu_share"
		android:icon="?attr/ic_action_share"
		android:title="@string/menu_share"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/menu_link"
		android:icon="?attr/ic_action_web_site"
		android:title="@string/menu_link_bgg"
		app:showAsAction="ifRoom"/>

</menu>